--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "use-immer": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
